--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Setup network
-        run: |
-          docker network create --driver bridge se-methods
-          docker pull mongo
-          docker run -d --name mongo-dbserver --network se-methods mongo
-      - name: Build with Maven
-        run: mvn package
-      - name: Build
-        run: docker build -t se_methods .
+      - name: Compile with Maven
+        run: mvn compile
+      - name: Build Docker Image
+        run: docker build -t devopsimage .
       - name: Run image
-        run: docker run --network se-methods --name devopscontainer se_methods
+        run: docker run --name devopscontainer -d devopsimage
       - name: view logs
         run: docker logs devopscontainer
